# Voynich_Phytoglyphica

./: 1st9.md  ENGINE.md  README.md  VOYNICH.md  VOYNICH_PHYTOGLYPHICA.md  commit.txt  demo.sh  images  pdfs  pyproject.toml
_builds/ENGINE/: ENGINE.tex  _body.tex
_builds/VOYNICH/: VOYNICH.tex  _body.md  _body.tex
_builds/VOYNICH_COMPLETE_LISTING/: VOYNICH_COMPLETE_LISTING.tex  _body.md  _body.tex
_builds/VOYNICH_PHYTOGLYPHICA/: VOYNICH_PHYTOGLYPHICA.tex  _body.md  _body.tex
data/: LSI_ivtff_0d.txt  voynich_findings.json  voynich_pharmacy.json  voynich_recipe_bio.json
illustrations/: generate_all.py
manuscripts/: ENGINE.md  VOYNICH.md  VOYNICH.md.bak  VOYNICH_ANNOTATED_FOLIOS.html  VOYNICH_BOTANICAL_COMPANION_LIFTED.md  VOYNICH_LIFTED.md  VOYNICH_PHYTOGLYPHICA.md
manuscripts/images/: 17_taxus_baccata_illustration.tif
programs/: ingest_ars_expanded.py
voynich_phytoglyphica/: __init__.py  cli.py  elaborator.py  imscriber.py  navigator.py
